--- a/src/markdown/english/1. Introduction.md
+++ b/src/markdown/english/1. Introduction.md
@@ -2,7 +2,7 @@ Your greatest superpower is the ability to change yourself.
 
 This book is not for the unserious. This book is for those that truly want to grow, find peace, and find freedom from the porn trap. For those interested in quick "productivity tips" or numbered principles, these will not be found in this book. Instead, this book will provide you with understandings you can use to make your own decisions.
 
-Many people think that all they need to do to quit porn is to...stop doing it. They say, "just stop watching it. Don’t open the window. Don’t watch porn. Distract yourself." But porn is not a choice. Consider this: Did you ever make the ‘positive’ choice that you must have porn to masturbate? Or that you should/must/need porn-induced fantasies to spice up sex with your partner? Or, that at certain times in your life, you couldn’t enjoy a good night’s sleep or perhaps even pass an evening after a hard day at work without surfing for porn? Or that you couldn’t concentrate or handle stress without it? At what stage did you decide that you needed porn, that you needed it permanently in your life, feeling insecure, even panicstricken without porn, without your online harem? The fact is, we never made this choice. Porn is not a choice, but a trap
+Many people think that all they need to do to quit porn is to...stop doing it. They say, "just stop watching it. Don’t open the window. Don’t watch porn. Distract yourself." But porn is not a choice. Consider this: Did you ever make the ‘positive’ choice that you must have porn to masturbate? Or that you should/must/need porn-induced fantasies to spice up sex with your partner? Or, that at certain times in your life, you couldn’t enjoy a good night’s sleep or perhaps even pass an evening after a hard day at work without surfing for porn? Or that you couldn’t concentrate or handle stress without it? At what stage did you decide that you needed porn, that you needed it permanently in your life, feeling insecure, even panicstricken without porn, without your online harem? The fact is, we never wanted this.
 
 Scrap the idea of "methods", "guides" and "how-to's". How-to's don't work except for extreme basics. If success were prescriptive, then everybody would be a success. There are many who obsessively browse "nofap" material only continuing in the hope that they could one day become successful. If your desire has become dependent, like you are hysterically driven to obtain something whatever the cost, then somewhere deep down inside you do not really believe that you can achieve it.
 
@@ -18,7 +18,7 @@ Truth-seeking essentially means that you have to understand, with deep convictio
 
 **Freedom comes from the understanding of where things come from, not the conscious attempt to end them.**
 
-Those who continuously fail may read the same book or strategy repeatedly without anything changing. My favorite quote that summarizes this well is from a villain in Far Cry 3. "The definition of insanity is doing the same thing over and over again and expecting a different result". Doing the exact same thing so many times with the same result is pointless. If you repeat something often to no avail, you misunderstand or miss a truth. Keep this in mind.
+Those who continuously fail may read the same book or strategy repeatedly without anything changing. My favorite quote that summarizes this well is from a villain in Far Cry 3. "The definition of insanity is doing the same thing over and over again and expecting a different result". Doing the exact same thing so many times with the same result is pointless. If you repeat something often to no avail, you misunderstand it, or the material does not contain truth. Keep this in mind.
 
 Why is PMO most annoying? - This is because it is embarrassing to talk about. Due to human nature and shame, it is often kept under wraps, getting progressively worse over the years, trapping the user forever. It is hard to approach friends and family about it because it would seem weird and incredibly awkward. This is the part of it that is most likely the worst. Those with addictions to smoking, food, drugs, and other instant pleasures can approach others and relatively easily find professionals to fix their issues. Societies can criticize the people producing what causes the addiction, and then collective progress can be made. But due to the awkward nature of talking about porn, such a collective sentiment is likely never to happen.
 
