--- a/src/markdown/english/10. Movement.md
+++ b/src/markdown/english/10. Movement.md
@@ -17,6 +17,6 @@ Many of you may be thankful for this book. You may want to show appreciation but
 
 Burgeon meaning: to grow.
 
-Mind Project Burgeon. - Out -
+Project Burgeon - Out -
 
-2022-2023
+Designed 2021-2023
