--- a/src/markdown/english/2. Stray Cat.md
+++ b/src/markdown/english/2. Stray Cat.md
@@ -24,7 +24,7 @@ So, let's return to the idea that we might have discovered nofap through a YouTu
 
 This is because people approach leaving PMO with a need for motivation. Some things can be broken with motivation, but habits/addictions cannot. Many "influencers" also use motivation as the primary cause for doing nofap. **Motivation is temporary**.
 
-To me, the mind should be a servant and a tool, not a master. The monkey mind should not control and drive you 24/7. A busy mind accelerates the passage of subjective time. Personally, I’m not going to be the most successful person on the planet, nor do I want to be. I just want to be the most successful version of myself while working the least hard possible. And with energy sinks like porn and masturbation in life, it will hinder these kinds of aspirations, and your journey of growth.
+To me, the mind should be a servant and a tool, not a master. The monkey mind should not control and drive you 24/7. Personally, I’m not going to be the most successful person on the planet, nor do I want to be. I just want to be the most successful version of myself while working the least hard possible. And with energy sinks like porn and masturbation in life, it will hinder these kinds of aspirations, and your journey of growth.
 
 ## False Incentives
 
