--- a/src/markdown/english/4. Brainwashing.md
+++ b/src/markdown/english/4. Brainwashing.md
@@ -50,20 +50,22 @@ The trouble with advice that does not work - is that those that preach it - pron
 
 The bad advice causes one to feel the need to constantly reinforce their newly picked up beliefs. However, *the constant assertion of belief is an indication of fear*. You do not need to constantly assert truth, because it is undisputed.
 
-((talk about streaks))
+There are many unproductive activities that people "*trying*" to leave porn and masturbation practice. One common thing is counting days, where a person counts to an arbitrary number of days for progress. This may seem like a good way to set goals, but the reality is, freedom is found on day 1. Not at day 30, not at day 90, not at day 1000. Freedom is found when you let go of the attachment of porn to your life. When you stop chasing. You do not need to keep rewarding yourself for not harming yourself. **Otherwise you might still see attraction in instant pleasures, or you might be looking for pleasure through progress**. Both of these things are not productive. Counting days adds extra pressure, and it comes with the notation that not self-sabotaging is impressive. It is just wise if one seeks a productive life, nothing more.
 
-((talk about one step at a time))
+People have this idea of "one step at a time" where they want to take each day at a time after quitting porn. However, this comes with the notion that something bad is happening. Like something is being lost from your life. Would you "take one day at a time" after you became free from a prison? No! Because you would no longer be trapped. Nothing changes physically, but just these changes in idology make it so a person who wants to find freedom treats it like the opposite - like a prison.
 
-((talk about "monsters"))
-"it was not some mysterious monster in my mind which forced me to use porn but it was me all along."
+Another way this attachment to porn can appear is through doing a certain amount of days, such as 7, 14 or 30 days of no PMO/MO. I do not understand it. Why return to something that has no benefit in your life? Why view this glimpse of freedom to dunk your head back in under the water? These people still believe it has some value in their lives. And it might, if they see benefit in instant 'pleasures'. But if you do not see benefit in "instant pleasures" there is nothing in porn that you desire.
 
-((talk about cycles))
+Another flawed idiology is "weening". Weening is the process of spreading usage apart over time, or lowering "severity" of a bad habit. This is typically used for drug addictions, where the body has a physical withdrawl and negative reaction from absence of a specific drug. However, porn does not have any physical withdrawl. Therefore, "weening" would only make sense if it worked for any mental withdrawl. The thing is, in the time between sessions, a person will start to fantasize about their next usage; they will build up dopamine and anticipation for it. In a sense, this can be even worse than not "weening" because of this even higher amount of anticipation. You do not need to ween something when you can find freedom in an instant.
 
-((talk about weening))
+The last major flawed idiology I will write on is "monsters". You may have heard the terms "little monster" and "big monster" to describe different parts of the human psyche. These are attempts at trying to simplify the dynamic of the human mind, however it fails at doing this. It creates a Me vs Them scenario. You create this imaginary enemy (this "monster"/primite brain) and you imagine yourself fighting this figure. The reality is, no big or little "monster" exist. Your "primitive brain" is not out to get you. It is an integral part of your system. One that is there to help you, not to hinder you. And you may say, this is wrong, that it takes away control from your life. And this may be true. But this occurs when you have a cognitive dissonance - when you are trying to force a belief/truth that you do not understand or that you have not figured out yourself.
 
-## The Path Towards Peace
-When self-improvement fails, work on discovering the truth. The search for peace is really the search for truth. Try to see the advantage of understanding things by discovering the truth rather than by practice.
+**Your primitive mind will not ignore an understood truth, but it will ignore a belief**. And some may say there is no difference, but this is false. Truth is digested and critiqued, found by the indivual. While belief is easily unfounded, based on little substance, and often external. This is the difference.
 
-When you discover the truth, bad habits can disappear with little effort through understanding.
+You can't force understanding of truth when you have an expectation of what it is - you must be open to whatever result is there when you find the answer. For example, if porn turned out to be beneficial for someone who wants a productive life, it would be intelligent to use it. Or if it turned out to be unproductive, you should not, and find freedom. With this in mind, you can use your deductive capabilities to quantify truth; when you have humility and sincerity of course.
 
-Only when the mind is still, tranquil, not expecting or grasping or resisting a single thing, is it possible to see what is true. It is the truth that liberates, not your effort to be free.
+So it is not productive to hate parts of your own mind, and the system that makes up your being. Self-hatred has no benefit or purpose. There is no invisible enemy that is out to get you every day, to force you into bad habits. It is just your brain making the most logical conclusions and actions based on your understandings of what truth is.
+
+"It was not some mysterious monster in my mind which forced me to use porn, but it was me all along."
+
+When you discover the truth, bad habits can disappear with little effort through understanding. Only when the mind is still, tranquil, not expecting or grasping or resisting a single thing, is it possible to see what is true. It is the truth that liberates, not your effort to be free.
