--- a/src/markdown/english/7. Environment.md
+++ b/src/markdown/english/7. Environment.md
@@ -48,4 +48,4 @@ These are the most effective through my thorough research. Each have been studie
 
 A little bit about each: Bromantane is a dopamine upregulator with permanent effects (after a few months). NAC is a well-known supplement which has anti-addictive properties. NACET is the same, but newer and much more potent. Cortexin is a peptide which has been shown to increase neuroplasticity, recover people from brain damage, increase brain growth, and support dopamine production. ALCAR is another dopamine upregulator, however it is somewhat more effective for older people. Agmatine Sulfate is mostly used for exercise performance, but it can permanently make positive changes to depressive mood.
 
-It is easy to waste money on nootropics and supplements, but if you want to purchase any, get these. Just wanted to add this in here, for those that would really benefit from these things. I have heard some people call this "cheating" recovery or something, but in reality, porn addiction is completely artificial and man-made. It is smart to use the opportunities your environment makes available to you. So do so.
+It is easy to waste money on nootropics and supplements, but if you want to purchase any, get these. Just wanted to add this in here, for those that would really benefit from these things. I have heard some people call this "cheating" recovery or something, but in reality, porn addiction is completely artificial and man-made. It is smart to use the opportunities your environment makes available to you.
