--- a/src/markdown/english/8. Transmutation.md
+++ b/src/markdown/english/8. Transmutation.md
@@ -2,31 +2,27 @@ Why are we spilling our drive freely?
 
 That life that you're supposed to have inside of you, that drive that you're supposed to have, to either go and get women or go and work yourself up to be attractive and successful enough to get women. That drive inside of you just gets diminished and thrown into a Kleenex.
 
-Transmutation is the art of directly transferring the kept sexual energy (from semen retention) into productive expenditures which encourage growth. 
-
-...
-
-Retaining the energy is not enough. Learn to transmute it and convert it into success.
-
-...
-
 But once your survival needs are met, then what's left is the biggest primitive need, the biggest desire, to continue the family line. And once you get rid of that desire, your monkey brain thinks you've achieved most of what you needed to do with your life (on a physical level). And so, of course, you feel lethargic, lazy, and tired.
 
-((For MO)) Imagine telling a fat guy that he has to go to the gym every single day, and if he misses one day, all of the benefits reset. That is inhumane. And that's what these NOFAP YouTubers do to you, and they convince you that you need to be on a streak. You don't need to be on a streak. ((We have to realise we are trying to get benefits not self-hatred))
+Instead of being in this lethargic state, where your body acts like it has achieved what it needs in life, you can create the complete opposite state via retaining your semen, and in doing so, retaining your sexual energy. This is called transmutation.
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Drawing of a person with an aura (not found)" src="http://localhost:8080/md_images/field_aura.png" height="250px" class="mdimg"></div>
 
+Transmutation is the art of directly transferring the kept sexual energy (from semen retention) into productive expenditures which encourage growth. It may seem weird, but it has been practiced in professional boxing for hundreds of years.
+
+You may think it is as simple as not doing releasing semen. However, retaining the energy is not enough. Learn to transmute it and convert it into success.
+
 When I talk about energy, I am not just talking about bodily energy, but the actual "amount of life" within you. When you release semen, you spend some of your own energy/life in this process and that is the tradeoff.
 
-The sexual energy is such a hurricane of force that it needs to find an outlet. It's either going to find an outlet through a relapse or through transmutation in which you lift that energy upwards and outwards to bring to life the fruits of your labor, the desires that are in your heart.
+The sexual energy is such a hurricane of force that it needs to find an outlet. It's either going to find an outlet through MO or through transmutation in which you lift that energy upwards and outwards to bring to life the fruits of your labor, the desires that are in your heart.
 
-Also just a quick note, you may feel a little more on-edge due to different changes in your body's chemistry. Keep your composure, as anger is its own punishment, as an angry person trying to push your head below water is drowning at the same time.
+Also just a quick note, you may feel a little more on-edge due to different changes in your body's chemistry when doing semen retention. Keep your composure, as anger is its own punishment, as an angry person trying to push your head below water is drowning at the same time.
 
 ## Aura / Life Force
 
 When semen retention is practiced (without still craving), something happens where the person gains a sort of "Aura" around them which attracts other people towards them. Some people link this to spiritual means, some link it to bodily changes and how you carry yourself. However, this effect of a general rise in attractiveness is not a one-off.
 
-This "seminal energy" (also called "Jing", "Chi" & "Life Force") generally creates an increased attraction towards your being. People discuss attraction from women when they talk about this, but this effects all interactions. People may strike up conversations with you more, and generally people will find you more interesting (likely also to do with dopamine).
+This "seminal energy" generally creates an increased attraction towards your being. People discuss attraction from women when they talk about this, but this effects all interactions. People may strike up conversations with you more, and generally people will find you more interesting (likely also to do with dopamine).
 
 You may notice this "Aura", or you may not, but when your dopamine receptors heal, and through transmutation, social interaction will be a lot more interesting.
 
@@ -34,7 +30,7 @@ However, stay humble through all of this; rather than making fun of those who we
 
 ## Outlets For Transmutation
 
-There are a number of physical outlets for transmutation. These are either physical or mental. Likely the most valuable outlet for sexual energy is creativity because it has infinite possibilites in what you can create and express.
+There are a number of physical outlets for sexual transmutation. These are either physical or mental. Likely the most valuable outlet for sexual energy is creativity because it has infinite possibilites in what you can create and express.
 
 Transmutation does not have a how-to guide. How-to's do not work except for extreme basics. You kind of just get a feel for it, when you notice it. And when you do, you realize what you were missing this whole time.
 
@@ -44,7 +40,7 @@ Transmutation does not have a how-to guide. How-to's do not work except for extr
 
 The first method of transmutation is simply working out. If you exercise you bring that energy up into your body and your efforts will be super charged, meaning your workouts will be super charged with the current of your new-found energy and "your body wanting to f*ck the world".
 
-I try to do at least some kind of exercise every morning, first thing in the morning and that is either lifting weights, calisthenics, going for a run or doing yoga and I highly highly encourage you to do the same.
+I try to do at least some kind of exercise every morning, first thing in the morning and that is either lifting weights or calisthenics and I highly highly encourage you to do the same. When you do it early in the morning, your body is most "awake" and it is also a way to enjoy the mornings.
 
 Regular exercise also increases the health of your dopamine receptors (D2/D3).
 
@@ -56,7 +52,7 @@ One thing I would advise, is that the mindfulness you practice in meditation sho
 
 Meditation also supports positive dopamine production significantly.
 
-### Deep Work / Creativity
+### Deep Work
 
 Transmutation effort number three is to do deep work. Deep work is a term that was coined by Cal Newport who is a professor at MIT in computer science and it basically means uninterrupted study.
 
