--- a/src/markdown/english/9. Understandings.md
+++ b/src/markdown/english/9. Understandings.md
@@ -5,3 +5,5 @@ Before you can fully understand what it means to choose, you have to know how to
 ((you are worthy of freedom))
 
 Freedom is not avoidance of what you don't like. Freedom is having clarity.
+
+((talk about night emissions))
