--- a/src/markdown/english/6. Neurology.md
+++ b/src/markdown/english/6. Neurology.md
@@ -23,19 +23,29 @@ A human will normally crave, and chase for their entire life. They will build an
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Image of endorphin structure" src="http://localhost:8080/md_images/void.png" height="230px"></div>
 
+Craving avoids one from asking the important questions. It consumes time, and it fills the mind. Yet, the reality is that if these people who crave stopped craving, they would have to face the fact that they have nothing else of substance in their life. Due to this chasing, they have made no meaningful action. And any meaningful action they may have made has been forgotten and lost to time.
+
+**Truth hurts so the mind typically avoids it.**
+
+This is why you can't "fix" everyone. Why many people will always be consumed with bad habits and destructive activities. If one is not aligned to truth, or does not have the humility to change, nothing will be done. They can read all of the "addiction recovery" books on the entire planet, and they won't change.
+
+If you do not want to waste your time: Do not force people to change. Provide them the door, but they must turn the key. Do not look down on people who are content with living a destructive life however - otherwise you place yourself above others and your vision is once again blinded. Have compassion for them.
+
 ## Fear
 
 An emotion is our evolved biology predicting the future impact of a current event. In modern settings, it’s usually exaggerated or false. This does not mean emotion is not useful, but it is not a reliable source of information. Especially when emotion is all that you are thinking about. For example, negative thoughts usually attach themselves to everything. If somebody is only thinking negative thoughts, they will attach negativity to everything. Even if the things they are looking at have not changed, their clarity is taken away via these negative thoughts.
 
 Fear is the destructive energy in man. It withers the mind, it distorts thought, it leads to all kinds of extraordinarily clever and subtle theories, absurd superstitions, dogmas, and beliefs.
 
-It is easy to say "you should not fear" or similar 'inspirational' quotes, but this does not do much. What does do something is identifying when you are thinking in fear, and, away from emotion, seeing if you really need to fear anything.
+It is easy to say "you should not fear" or similar 'inspirational' quotes, but this does not do much. What does do something is identifying when you are thinking in fear. And, when bringing the mind away from emotion, you can see if you really need to fear anything.
 
-Also, if because you accidentally see someone naked or porn (by accident), it will not create a destructive dopamine effect. However, actively seeking lewd material or porn for pleasure does. You do not need to be afraid of watching movies where there are sexual scenes. Or afraid of lewd material. You can change your environment to where you see these things rarely - however, you do not need to fear these things. Your view on these things completely determines their ability to impact you.
+Also, if you accidentally see someone naked or porn (by accident), it will not create a negative dopamine effect. However, actively seeking these things does. You do not need to be afraid of watching movies where there are sexual scenes. Or afraid of lewd material being sent by some idiot. You can change your environment to where you see these things rarely - however, you do not need to fear these things. Your view completely determines their ability to impact you.
 
-"Everyone is failing, so how isn’t it likely that I too will fail?". This is what is called, “The Failure Circle”. One person fails because they failed to follow instructions, and then those that hear of this person’s failure get doubt and fear of failure, and thus slip up. Their slip ups are reported within an online community, and others who see them get doubt and fear as well, and it goes on and on and on. They get the false impression that it’s hard, and thus it becomes hard.
+"Everyone is failing, so how isn’t it likely that I too will fail?". This is what is called, “The Failure Circle”. One person fails because they may lack humility, and then those that hear of this person’s failure get doubt and fear of failure, and thus slip up. Their slip ups are reported within an online community, and others who see them get doubt and fear as well, and it goes on and on and on. They get the false impression that it’s hard, and thus it becomes hard.
 
 However, when one reframes the way they look at PMO use and no longer sabotaging themselves, then they do not need to care for these others. **To make progress, you must look out for yourself**. 
+
+One thing you may do, after finding freedom, is fear losing this freedom. You can find comfort through realising you can do whatever you want with your life. You could go back to self-sabotaging through porn. But will you? Is there any benefit to "instant pleasures"? You do not need to fear losing freedom; you can do whatever you want.
 
 ## Habitual Pathways
 
@@ -47,6 +57,22 @@ However, you can change these habits, and the way your mind views the world, thr
 
 "You have to take a second to sit down, to thoroughly observe your patterns. Do you move when you don't want to move, do you get angry when you don't want to get angry; you have to fix these things about yourself, you have to give a fuck about yourself and that makes life so much better." - Jah.
 
+When we make a conscious effort to change, these pathways can change. But it requires a lot of humility and it requires one to lower their ego.
+
 ## The Self-Improvement Trap
 
 "Self-improvement" is just a dressed up form of self-conflict.
+
+Let's say you "self-improve" enough to where you gain your dream form; you are productive, you no longer use porn, you are physically strong, you are confident. The thing is, after all of this "self-improvement" where is your direction? Most do not want to ask this question because they would rather be consumed by their repeated failed attempts to "self-improve".
+
+Saying you need to improve is also saying that there is something wrong with you currently; you are not satisfactory. This thought of not being good enough looms over a "self-improver" to where they constantly feel like they are missing the mark of their ideal self. And when they fail at improving, they use bad habits to cope, so it cycles on and on.
+
+This can get depressing. For someone who constantly feels like they are missing the mark, it makes them feel not good enough. This negatively effects their productivity and happiness. One root of this is perfectionism. The idea that there is perfect version of you. However, perfect does not exist. Humans will always will be imperfect. And that is okay.
+
+The key, if you want to become a better version of yourself is to aim to be good. Not perfect.
+
+And even after that, you should think about what interests you past the point of improvement. If you do not answer this question, "improvement" will be the only thing you do.
+
+The way I look at it; I am not "improving myself" but I am just practicing life in a way that I find most satisfactory; a life that is the most purposeful. While desire does not lead to peace, I still find satisfaction in making accomplishments and finding freedom on different levels (monetary, etc).
+
+In any case, most people doing "self-improvement" have no idea why they are practicing it. They want to be better. They want to get women. They want to be more confident. However, even though "self-improvement" is a long-term benefit, the end result for these people is still short-term pleasures. Think on your reasons for being interested in "self-improvement" and you can find out many things that will likely bring clarity.
