--- a/src/markdown/english/2. Stray Cat.md
+++ b/src/markdown/english/2. Stray Cat.md
@@ -38,6 +38,8 @@ Be aware not to base your reasoning for quitting on any false incentives. Some o
 
 False incentives provide the ammo to fuel your brain's defense mechanisms. As a response to what our brains interpret as a threat, we have some key reactions. We dismiss opposing views and make illogical justifications and excuses for our actions. Defense mechanisms are what your brain uses when you are in a reactionary state, so instead of having a false incentive, you should have an incentive grounded in yourself.
 
-Forget the initial incentive for being interested or wanting to quit. Make the understanding now (and continue to as you learn) that porn and masturbation has no benefit to us. We may think this statement to be untrue as we imagine what we receive as pleasure and the reward we get after using, but this is just another way that defense mechanisms have shown themselves. You will understand this truth soon.
+Forget the initial incentive for being interested or wanting to quit. Freedom must be found on one's own accord; not by or for external influence.
+
+Everyone is caught up in suffering and conflict, but most people are unconscious of that conflict; they are merely seeking substitutions, solutions, and escapes. Whereas if they cease seeking escapes and begin to question the environment that causes that conflict, then the mind becomes acute, alive and intelligent.
 
 Do not quit for anybody else. Quit for yourself.
