--- a/src/markdown/english/4. Brainwashing.md
+++ b/src/markdown/english/4. Brainwashing.md
@@ -68,4 +68,6 @@ So it is not productive to hate parts of your own mind, and the system that make
 
 "It was not some mysterious monster in my mind which forced me to use porn, but it was me all along."
 
+Freedom is not found through substitution or escape from environment. Freedom is found through understanding the nature of what holds us back. Not through fighting or hating these things. We want to fight problems more than we want to understand them.
+
 When you discover the truth, bad habits can disappear with little effort through understanding. Only when the mind is still, tranquil, not expecting or grasping or resisting a single thing, is it possible to see what is true. It is the truth that liberates, not your effort to be free.
