--- a/src/markdown/english/6. Neurology.md
+++ b/src/markdown/english/6. Neurology.md
@@ -76,3 +76,5 @@ And even after that, you should think about what interests you past the point of
 The way I look at it; I am not "improving myself" but I am just practicing life in a way that I find most satisfactory; a life that is the most purposeful. While desire does not lead to peace, I still find satisfaction in making accomplishments and finding freedom on different levels (monetary, etc).
 
 In any case, most people doing "self-improvement" have no idea why they are practicing it. They want to be better. They want to get women. They want to be more confident. However, even though "self-improvement" is a long-term benefit, the end result for these people is still short-term pleasures. Think on your reasons for being interested in "self-improvement" and you can find out many things that will likely bring clarity.
+
+What you call self-discipline - is merely an adjustment to an environment which we have not completely understood; therefore, in that adjustment there must be the denial of intelligence. Why has one ever to discipline one's self? instead of this avoidance, this conflict, one can understand the nature of what they create a conflict with. And then the mind will become free.
