--- a/src/markdown/english/9. Understandings.md
+++ b/src/markdown/english/9. Understandings.md
@@ -4,6 +4,11 @@ Before you can fully understand what it means to choose, you have to know how to
 
 ((you are worthy of freedom))
 
-Freedom is not avoidance of what you don't like. Freedom is having clarity.
+Freedom is not avoidance of what you don't like. Freedom is having clarity - and you are worthy of having this freedom. In fact, nobody isn't.
 
+## Night Emissions
 ((talk about night emissions))
+
+## Substitution
+
+In substitution there is no understanding. If you look closely you will see that substitution is nothing but a search for comfort and security and escape; not a search for understanding, not a search for truth, but rather a search for an evasion.
