--- a/src/markdown/english/7. Environment.md
+++ b/src/markdown/english/7. Environment.md
@@ -6,19 +6,21 @@ Breaking addiction requires a new lifestyle. People struggle with breaking addic
 
 If there is a gaping hole in your life where PMO was, then how do you not expect to fill it? If you still crave pleasure and feeling, then you will just fill that hole with another destructive activity. And then what progress is made? One must change lifestyle and perspective for this change.
 
+Whenever there is the lack of understanding of environment there must be conflict. Environment gives birth to conflict, and so long as we do not understand environment, conditions, surroundings, and are merely seeking substitutions for these conditions, we are evading one conflict and meeting another.
+
 ## External Influence
 
 Addiction holds together fake relationships and fake activities. If I drink to be social and do that enough, I’ll find myself hanging out with people I wouldn’t spend time with otherwise. When I’m sober, I can’t tolerate these people, the topics we discuss or the venues we visit. I can only do it drunk.
 
 It can go the other way as well. Let's say hypothetically all of your friends are linked to you by some sort of debilitating habit ("recovering" together). How do you move on from that without being a complete loner? How can you move on from your addiction without survivor's guilt?
 
-This is the exact problem with "communities" based around leaving addictions. If PMO addiction is your common trait, building a community around it means either you become free or you stay with your friends. This creates unneeded pressure. The first rule of handling conflict is don’t hang around people who are constantly engaging in conflict.
+This is the exact problem with "communities" based around leaving addictions. If PMO addiction (or any for that matter) is your common trait, then building a community around it means either you become free or you stay with your friends. This creates unneeded pressure. The first rule of handling conflict is don’t hang around people who are constantly engaging in conflict.
 
-"No-porn" groups and "semen-retention" groups systematically lead people to failure. Not through their own purposeful action, but just through the community itself. First, it creates unneeded pressure. Second, you may ask advice from people that have no idea of what they are talking about. Third, you may try to help people but fail because your only need is to help yourself. Fourth, the community may encourage public streaks and external reward rather than internal. Fifth, groups never lead to truth but consensus. Basically - except for groups based **solely** around spreading the word, groups like these will hinder and hurt your ability to become free.
+"No-porn" groups and "semen-retention" groups systematically lead people to failure. Not through their own purposeful action, but just through the structure of community itself. First, it creates unneeded pressure. Second, you may ask advice from people that have no idea of what they are talking about. Third, you may try to help people but fail because your only priority should be to help yourself. Fourth, the community may encourage public "streaks" and external reward rather than internal. Fifth, groups never lead to truth but consensus. Basically - except for groups based **solely** around spreading the word, groups like these will hinder and hurt your ability to become free.
 
 Conflicting information is the birth of confusion. And many preach messages that seem credible, that seem legitimate, like they know what they are talking about. But I assure you, in the world we live in, mistruths run everything. Is this "bad"? - For the group? No. For the individual? Yes.
 
-If you look at these groups or forums to a second, you can see the desperation in people. They tell themselves that this time will be different, that this time they will take control of themselves. Yet they change nothing. They change nothing in their understanding, and they repeat the same process. After some time, they have broken so many promises to themselves that they do not even trust themselves. They have no confidence. And if they do, they are likely deluded. If you repeat, rather than iterate (changing something each time), then you are wasting time.
+If you look at these groups or forums for a second, you can see the desperation in people. They tell themselves that this time will be different, that this time they will take control of themselves. Yet they change nothing. They change nothing in their understanding, and they repeat the same process. After some time, they have broken so many promises to themselves that they do not even trust themselves. They have no confidence. And if they do, they are likely deluded. If you repeat, rather than iterate (changing something each time), then you are wasting time.
 
 Self-development is its own bubble. You're surrounded with positive messages. Everyone's telling everyone you're all going to be successful or your gurus are making posts about being happy and blocking out those negative thoughts. But just like any bubble, there's always a burst.
 
