--- a/src/markdown/english/10. Movement.md
+++ b/src/markdown/english/10. Movement.md
@@ -2,8 +2,10 @@
 
 You can't help people while drowning. ((many attempt to because they avoid themselves))
 
+Most people have a natural tendency to romanticize the past - to remember the good things they experienced and forget about the bad things. Just think about how people sometimes recount the "glory days" of their youth, or how older adults may sometimes comment that things were better "in their day." In psychological terms, this is known as memory bias, and a person may be more likely to exhibit it when their present life circumstances are difficult or unfavorable.
 
-Find three hobbies: One that makes you money, one that keeps you fit, and one that makes you creative/expressive. 
+
+Some good advice is to find three hobbies: One that makes you money, one that keeps you fit, and one that makes you creative/helps expression.
 
 ...
 
@@ -14,6 +16,8 @@ A part of your brain, the basal ganglia, is your autopilot. It does things witho
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="-------------" src="http://localhost:8080/md_images/divider_1.png" height="100px"></div>
 
 Many of you may be thankful for this book. You may want to show appreciation but I am not an idol. In the scheme of things, I know nothing, and can grow so much more. And so can you. If you want to thank me, purchase a physical copy for a friend you think may benefit from it, and give opportunity to those who you see in a bad place. Thank you for reading! <3
+
+By the way, please do not call this book a "guide" or "method" when talking about it, it makes me cringe.
 
 Burgeon meaning: to grow.
 
