--- a/src/markdown/english/3. Effects.md
+++ b/src/markdown/english/3. Effects.md
@@ -86,4 +86,6 @@ There was a study where scientists used a dopamine-blocking agent in rats to see
 
 It does not matter how appealing something is, the health of your dopamine system makes it more likely or less likely you will be attracted towards the thing. You may have goals and dreams in the sense of your higher being/self, but with downregulated dopamine, those will stay as hopes and dreams, as the dopamine of completing those is less than porn. I hope you can see why this leads to living like a slob and lack of care for one's self.
 
+You know we have lost all sense of living normally, simply, directly. To get back to that normality, that simplicity, that directness, you cannot follow methods, you cannot merely become automatic machines; and I am afraid most of us are seeking methods because we think that through them we shall realise fullness, stability and permanency. To me, methods lead to slow stagnation and decay and they have nothing to do with real self-growth, which is after all, the summation of intelligence.
+
 The stereotype of porn addicts looking like a slob is true, because dopamine desensitization makes them not care about or spend any time on their appearance. However, if one takes control of their dopaminergic system, they can take control of their life.
