--- a/src/markdown/english/7. Environment.md
+++ b/src/markdown/english/7. Environment.md
@@ -38,16 +38,14 @@ Counting days is like trying to do things "one step at a time". But the reality 
 
 ## The Potential of Nootropics (Extra Section)
 
-Nootropics (potent supplements) have a very large potential for speeding up the dopaminergic recovery from porn use, and other addictive activities. While they should not be depended on, and are not necessary, for those that want to utilise them, it can be effective. With time, the research on nootropics will change, and more effective solutions will come out. However, in the current year (2023), the following are the most effective nootropics (in order) for dopaminergic recovery.
+Nootropics (potent supplements) have a very large potential for speeding up the dopaminergic recovery from porn use, and other addictive activities. While they should not be depended on, and are not necessary, for those that want to utilise them, it can be effective. With time, the research on nootropics will change, and more effective solutions will come out. However, in the current year (2023), the following are the most effective nootropics (in order) for dopaminergic (and related) recovery.
 
 1. Bromantane (Intranasal 18mg/day)
 2. NACET (50-100mg/day) [this is better] or NAC (1g/day)
-3. Cortexin (Intranasal 2mg/day)
-4. ALCAR (0.5g/day)
-5. Agmatine Sulfate (750mg 2x/day)
+3. ALCAR (0.5g/day)
+4. Agmatine Sulfate (750mg 2x/day)
+5. Cortexin (Intranasal 1-2mg/day)
 
-These are the most effective through my thorough research. Each have been studied and verified for their safety and effectiveness. These should not be relied upon for recovery of the dopamine system, but they can help speed it up. You still need to understand the problem to become free.
-
-A little bit about each: Bromantane is a dopamine upregulator with permanent effects (after a few months). NAC is a well-known supplement which has anti-addictive properties. NACET is the same, but newer and much more potent. Cortexin is a peptide which has been shown to increase neuroplasticity, recover people from brain damage, increase brain growth, and support dopamine production. ALCAR is another dopamine upregulator, however it is somewhat more effective for older people. Agmatine Sulfate is mostly used for exercise performance, but it can permanently make positive changes to depressive mood.
+These are the most effective through my thorough research. Each have been studied and verified for their safety and effectiveness. These should not be relied upon for recovery, but they can help speed it up. You still need to understand the problem at hand to find freedom.
 
 It is easy to waste money on nootropics and supplements, but if you want to purchase any, get these. Just wanted to add this in here, for those that would really benefit from these things. I have heard some people call this "cheating" recovery or something, but in reality, porn addiction is completely artificial and man-made. It is smart to use the opportunities your environment makes available to you.
