--- a/src/markdown/english/9. Understandings.md
+++ b/src/markdown/english/9. Understandings.md
@@ -7,7 +7,18 @@ Before you can fully understand what it means to choose, you have to know how to
 Freedom is not avoidance of what you don't like. Freedom is having clarity - and you are worthy of having this freedom. In fact, nobody isn't.
 
 ## Night Emissions
-((talk about night emissions))
+
+Night emissions, commonly known as "wet dreams" are a natural occurance to get rid of older seminal fluid. They are dreams of a sexual nature that are often nonsensical, created by the subconscious to encourage release. This is not a "relapse", even if you feel slightly more groggy in the morning.
+
+It is wise not to view these night emissions negatively or positively. They are just a minor inconvenience that occurs naturally to keep your body in check. It is a sign that you have a high fertility and you have a healthy endocrine system. Don't look forward to these dreams, because they can become a substitution. However, there is no reason to fear these dreams either. 
+
+## Boredom
+
+When a user becomes free, they will have more time available, in terms of amount of time, and dedication towards that time.
+
+There is a beauty in rediscovering what you used to enjoy. Finding happiness out of small small moments or small achievements.
+
+And when one is bored it is the birth of creativity - the birth of change. In times of boredom, you may think back to PMO use, because the idea of it in your mind outweighed the idea of meaningful action in the present. Finding the meaning and beauty out of this time with yourself means a lot.
 
 ## Substitution
 
